Fixed width, navbar animation and navbar z-index

--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -10,7 +10,7 @@
     -webkit-backdrop-filter: blur(4px);
     border: 1px solid rgba(255, 255, 255, 0.18);
     position: fixed;
-    z-index: 2;
+    z-index: 10;
 }
 
 .app__navbar-logo {
