--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -4,6 +4,7 @@
 	background-size: cover;
 	background-repeat: repeat;
 	background-position: center;
+	overflow: hidden;
 
 	.app__wrapper {
 		padding: 0;
@@ -91,7 +92,7 @@
 }
 
 .app__header-circles {
-	flex: 0.75;
+	flex: 0.5;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
